--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-./terraform.lock.hcl
-./terraform-aws.pub
-./terraform.tfstate
-./terraform.tfstate.backup
-./.terraform
-./.terraform/*
+.terraform.lock.*
+terraform-aws.pub
+terraform.tfstate
+terraform.tfstate.backup
+.terraform/*
